# data_engineering_journey

./: README.md  numbers.csv
1-reviewPython/: calculaMediaCSV2.py  calculamediacsv.py  readcsv.py
2-archiveManipulation/: .cache.sqlite  1_pratica.py  2_pratica.py  arquivos.ipynb  manipulacaoArquivos.ipynb  manipulateJson.ipynb  miniProjectAPI.py
3-requestsAndColector/: request.py  timeoutRetry.ipynb  tratamentoErros.ipynb
3-requestsAndColector/requests-policy/: pyproject.toml
3-requestsAndColector/requests-policy/src/requests_policy/: configs.py  main.py
3-requestsAndColector/requests-policy/src/requests_policy/utils/: http.py  http_adapters.py  http_hooks.py
